Se creó con Colab

--- a/Pre_entrega1.ipynb
+++ b/Pre_entrega1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNuoYS4x6hX9tx7mSh7Rkio",
+      "authorship_tag": "ABX9TyNKc7vSJGE1fc+XgroQAROq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,15 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_-4JSgL1eWFR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "#**Análisis Car Accident Dataset**"
@@ -40,7 +49,8 @@
       "source": [
         "##**Descripción de la temática**\n",
         "\n",
-        "El presente proyecto tiene como objetivo analizar un dataset detallado sobre accidentes de automóviles ocurridos en un área urbana durante enero de 2021. Este conjunto de datos incluye información clave, como la fecha y el día de la semana en que ocurrieron los accidentes, el tipo de control en intersecciones, la gravedad de los accidentes, las coordenadas geográficas, las condiciones de iluminación y clima, y detalles de los vehículos involucrados.\n",
+        "El presente proyecto tiene como objetivo analizar un dataset detallado sobre accidentes de automóviles ocurridos en un área urbana durante enero de 2021. Este conjunto de datos extraido de la plataforma ***Kaggle (***https://www.kaggle.com/datasets/nextmillionaire/car-accident-dataset)\n",
+        " incluye información clave, como la fecha y el día de la semana en que ocurrieron los accidentes, el tipo de control en intersecciones, la gravedad de los accidentes, entre otros.\n",
         "\n",
         "El análisis se realiza con el propósito de identificar patrones significativos en los accidentes viales, con especial énfasis en comprender los factores que los provocan y aumentan su severidad. Los resultados servirán como base para diseñar estrategias de prevención y mejora en la seguridad vial, buscando reducir la ocurrencia de accidentes y mitigar su impacto.\n",
         "\n",
@@ -92,7 +102,7 @@
       "metadata": {
         "id": "yew3dsXoslcZ"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -105,12 +115,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 394
+          "height": 623
         },
         "id": "hlJrSdhBsZuh",
         "outputId": "acb88b7e-ffba-4341-b6b8-968f87cdc49d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -695,7 +705,7 @@
         "id": "Hr6Ohfj1Vkn4",
         "outputId": "43914f85-ef96-47f0-8e82-3b0f25b7a972"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -722,7 +732,7 @@
         "id": "IcfJK70UWSN9",
         "outputId": "fef68a7c-9068-4e35-f06b-6971566f5442"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -851,7 +861,7 @@
         "id": "UHOMzt34WpS6",
         "outputId": "baec0312-20ee-4409-cd68-396ed30bb7b9"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -995,7 +1005,7 @@
         "id": "15ILrdk0XZ1k",
         "outputId": "d49ed5a0-3182-4ab8-ffe4-4852b203a959"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1099,12 +1109,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 617
+          "height": 637
         },
         "id": "F0uZxq8UymLU",
         "outputId": "12b78c44-ac59-42cf-d08c-7872f0cc8282"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1199,12 +1209,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 617
+          "height": 637
         },
         "id": "f6gOffcQ4MS0",
         "outputId": "f13840f0-1185-4e8e-b524-29e973f52847"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1331,7 +1341,7 @@
         "id": "mzGOsqUgqfs4",
         "outputId": "2c05ab13-bd3c-4b9b-b593-40b41282c9a7"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1412,7 +1422,7 @@
         "id": "7P3Bj2yMzdck",
         "outputId": "05f8765c-7f28-45f0-a985-f2b727b9914d"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1494,12 +1504,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 693
+          "height": 713
         },
         "id": "xAKH36MLzt6t",
         "outputId": "d4bfe375-01b1-4c86-e6eb-a1af2e3289da"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
